<resources>
    <string name="app_name">第三个app_江坚鑫</string>
    <string name="username">用户名</string>
    <string name="password">密&#160;&#160;&#160;&#160;码</string>
    <string name="hint1">请输入用户名</string>
    <string name="hint2">请输入密码</string>
    <string name="login">登&#160;&#160;陆</string>
    <string name="out">退&#160;&#160;出</string>
    <string name="register">注&#160;&#160;册</string>
</resources>
