<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:background="@drawable/b"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="登 陆APP"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size"
            android:textColor="@color/colorAccent"
            android:text="@string/username" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint1"
            android:inputType="textPersonName"
            android:textSize="@dimen/size" />
    </LinearLayout>

    <LinearLayout
        android:paddingTop="@dimen/paddingTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size"
            android:textColor="@color/colorAccent"
            android:text="@string/password" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint2"
            android:inputType="numberPassword"
            android:textSize="@dimen/size"
            android:maxLength="6"


            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp"
        >

        <Button


            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/pink"
            android:textSize="@dimen/size" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"

            android:text="@string/out"
            android:textColor="@color/pink"
            android:textSize="@dimen/size" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:textColor="@color/pink"
            android:textSize="@dimen/size"
            android:text="@string/register" />

    </LinearLayout>



</LinearLayout>